<resources>
    <string name="app_name">MOIN</string>
    <string name="main_tab_name_focus">关注</string>
    <string name="main_tab_name_discovery">首页</string>
    <string name="main_tab_name_emoji">表情</string>
    <string name="main_tab_name_sticker">贴纸</string>
    <string name="main_tab_name_me">我的</string>
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>
    <string name="loading">玩儿命加载中…</string>
    <string name="loading_no_more">好啦，后面没有啦…</string>
    <string name="loading_error">攻城狮GG病了，加载不给力…</string>
    <string name="loading_no_data">好啦，没有信息啦，宝宝玩儿去喽…</string>
    <string name="error_view_click_to_refresh">点点屏幕,再耍（刷）一次</string>
    <string name="error_view_loading">玩儿命加载中…</string>
    <string name="error_view_unlogin">曾经认识一位朋友,我找不到他/她了,\n是你吗…</string>
    <string name="error_view_nothing">唉,什么都没有</string>
    <string name="error_view_no_data">我是个过客,只有在你孤单的时候,\n你会注意到我…</string>
    <string name="error_view_no_network">哇,断网啦</string>
    <string name="error_view_load_error_click_to_refresh">好像哪里出问题了⊙o⊙\r\n人家也很无辜的啦…客官，要不您再刷新试试看。</string>
    <string name="error_view_network_error_click_to_refresh">奶奶打电话来说,家里也请人装了WIFI…</string>
    <string name="tip_network_error">喂？莫西？hello？撒瓦迪卡…啥玩意儿啊，没网了 z(U_U)z</string>
    <string name="unlogin">着急了点啊……请先登录吧</string>
    <string name="unlogin_tip">本宫要灰常严肃滴批评你：你还没登录呢！\r\n噢！也许是网络信号跑得慢了点儿</string>
    <string name="my_information_unlogin_tips">本宫要灰常严肃滴批评你：你还没登录</string>
    <string name="hint_username">输入帐号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">Email地址技术含量不够哇，请重新输入</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在玩儿命登录中…</string>
    <string name="tip_login_error_for_network">灰常抱歉,宝宝没能帮客官登录上去。歇会儿再试吧</string>
    <string name="tip_no_internet">吭哧了半天，原来网络不给力，本宫要炸啦！哇咔咔…\r\n（10秒后）对不住啊客官，小女子刚刚有点失态 (. Q.)</string>
    <string name="actionbar_title_event_location">活动地址</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="actionbar_title_active">好友圈</string>
    <string name="actionbar_title_mes">消息中心</string>
    <string name="actionbar_title_message_detail">对话</string>
    <string name="share_to">分享到</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_qzone">QQ空间</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_sina">新浪微博</string>
    <string name="platform_weichat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <string name="platform_contacts">通讯录</string>
    <string name="share_title">分享</string>
    <string name="tip_start_share">开始愉快的分享…</string>
    <string name="tip_share_done">分享完成了哟…</string>
    <string name="tip_share_not_ready">图片还没准备好,请稍侯…</string>
    <string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>
    <string name="add_favorite_success">收藏成功</string>
    <string name="add_favorite_faile">讨厌！收藏失败啦</string>
    <string name="del_favorite_success">已取消收藏</string>
    <string name="del_favorite_faile">取消收藏失败啦</string>
    <string name="add_like_success">点赞成功</string>
    <string name="add_like_faile">讨厌！点赞失败啦</string>
    <string name="del_like_success">已取消点赞</string>
    <string name="del_like_faile">取消点赞失败啦</string>
    <string name="cosplay_not_upload_faile">图片没有上传成功</string>
    <string name="cosplay_uploading">正在上传...</string>
    <string name="cosplay_upload_fail">图片上传失败,点此重新上传</string>
    <string name="cosplay_upload_succeed">上传成功</string>
    <string name="cosplay_upload_succeed_tip">发布成功</string>
    <string name="cosplay_upload_file_not_exist">文件不存在</string>
    <string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_count">评论(%s)</string>
    <string name="comment_empty">木有人评论，好桑心</string>
    <string name="comment_hint">说点什么吧</string>
    <string name="answer_count">回复(%s)</string>
    <string name="post_answer">回复</string>
    <string name="comment_reply_count">---共有%s条回复---</string>
    <string name="comment_refer_author">引用来自%s的评论</string>
    <string name="tip_comment_content_empty">新来的吧…规矩：评论内容不能为空</string>
    <string name="tip_comment_target_empty">你需要点击一条关注进行评论</string>
    <string name="comment_when_no_login">先登录再评论~</string>
    <string name="comment_blog">发布评论</string>
    <string name="comment_publishing">正在玩儿命的提交评论信息…</string>
    <string name="comment_publish_success">评论成功了哟</string>
    <string name="comment_publish_faile">评论失败啦</string>
    <string name="progress_submit">正在玩儿命提交…</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="clean_cache_mes">要不要清空缓存?</string>
    <string name="draft_tweet_message">要不要保存为草稿?</string>
    <string name="clearwords">要不要清空内容?</string>
    <string name="choose_picture">选择图片</string>
    <string name="tip_content_empty">宝宝都说过多少遍了，内容不能为空的啦</string>
    <string name="tip_content_too_long">本宫知道你忠心，但爱卿发的内容太长了。</string>
    <string name="actionbar_title_comment">评论列表</string>
    <string name="actionbar_title_cosdetail">图片详情</string>
    <string name="actionbar_title_user_favorite">用户收藏</string>
    <string name="actionbar_title_my_information">我的资料</string>
    <string name="actionbar_title_my_friends">关注/粉丝</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_setting_notification">新消息提醒</string>
    <string name="actionbar_title_about_osc">关于MOIN</string>
    <string name="actionbar_title_search">搜索</string>
    <string name="private_message">私信</string>
    <string name="follow_user">关注</string>
    <string name="unfollow_user">取消关注</string>
    <string name="follow_each_other">取消互粉</string>
    <string name="latest_login_time">最近登录  %s</string>
    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">加入时间:</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>
    <string name="from_web">网页</string>
    <string name="from_mobile">手机</string>
    <string name="from_android">Android</string>
    <string name="from_iphone">iPhone</string>
    <string name="from_windows_phone">Windows Phone</string>
    <string name="from_wechat">微信</string>
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="send_message_to">发送私信给:</string>
    <string name="hint_user_name">对方昵称</string>
    <string name="hint_message">私信内容</string>
    <string name="tip_message_public_success">发送成功</string>
    <string name="tip_message_public_faile">发送失败</string>
    <string name="send_to">发给</string>
    <string name="message_count">%s条私信</string>
    <string name="confirm_delete_message">这家伙桑着你啦？真的要删除和\"%s\"的所有私信吗?</string>
    <string name="confirm_delete_one_message">真的要删除这条私信吗?</string>
    <string name="tip_delete_success">欧耶,删除成功！这个世界清静了 (. Q.)</string>
    <string name="tip_delete_faile">讨厌！竟然没删掉。再试一次</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在加班删除中…</string>
    <string name="delete_success">欧耶,删除成功！这个世界清静了 (. Q.)</string>
    <string name="delete_faile">讨厌！竟然没删掉。再试一次</string>
    <string name="you_have_news_messages">你有%s条最新消息。开森吗？</string>
    <string name="atme_count">\@我(%s) </string>
    <string name="msg_count">私信(%s) </string>
    <string name="review_count">评论(%s) </string>
    <string name="fans_count">新粉丝(%s) </string>
    <string name="like_count">收到赞(%s) </string>
    <string name="loading_img">加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="mes_notice_setting">消息通知设置</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="update">检查新版本</string>
    <string name="about">关于MOIN</string>
    <string name="feedback">意见反馈</string>
    <string name="watermark">显示水印</string>
    <string name="message_notification">消息提醒</string>
    <string name="notify_style_sound">铃声提醒</string>
    <string name="notify_style_vibrate">只震动方式</string>
    <string name="notify_style_none">不提醒</string>
    <string name="exit">退出登录</string>
    <string name="grade">去评分</string>
    <string name="notice_accept">接收所有通知</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>
    <string name="notice_app_exit">退出后不提醒</string>
    <string name="tip_logout_success">客官已经退出登录了</string>
    <string name="tip_save_image_suc">图片已保存(手机相册-> MOIN)</string>
    <string name="tip_save_image_faile">讨厌！无法保存图片</string>
    <string name="tip_load_image_faile">设计师MM病了，图片加载不出来(>_&lt;)?</string>
    <string name="down_state">正在玩儿命下载中：%s</string>
    <string name="event_start_time">开始：%s</string>
    <string name="event_end_time">结束：%s</string>
    <string name="report">举报</string>
    <string name="report_link">链接地址</string>
    <string name="report_reson">举报原因</string>
    <string name="hint_report_desc">其他原因</string>
    <string name="tip_report_success">欧耶,举报成功。下黑手哇…2333</string>
    <string name="tip_report_faile">咿，举报失败了。神马情况？宝宝也纳闷儿啊 (>_&lt;)?</string>
    <string name="tip_double_click_exit">再点一次退出MOIN。</string>
    <string name="team_dynamic">团队动态</string>
    <string name="actionbar_dynamic_detail">动态内容</string>
    <string name="str_feedback_submit">提交</string>
    <string name="str_feedback_et_hint">为了你，我们会一直努力滴</string>
    <string name="str_feedback_contact">手机号或邮箱：（选填）</string>
    <string name="str_feedback_contact_hint">方便我们联络客官您</string>
    <string name="str_feedback_succeed">32个赞！老板交代过，必须重视客官的意见 (*^﹏^*)</string>
    <string name="str_feedback_tip">客官的意见我们会看，有空就回复，要是没空…就抽空回复。感谢客官您的支持 (*^﹏^*)</string>
    <string name="str_feedback_title">用户反馈</string>
    <string name="enter_app">开始体验</string>
    <string name="nq_md_drawerOpenIndicatorDesc">关闭</string>
    <string name="regist_password_digits">1234567890,.+-*/_=%[]{}\|~`!@#$^()?abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="retrieve_password_hint">请输入新密码</string>
    <string name="retrieve_password_sure_hint">请确认新密码</string>
    <string name="s_emoji">从表情选择</string>
    <string name="s_album">从手机相册选择</string>
    <string name="save">保存</string>
    <string name="camera">拍照</string>
    <string name="account_security">账户安全</string>
    <string name="about_intro">MOIN 成为大片主角</string>
    <string name="about_version">版本 V3.2.9</string>
    <string name="service_agreement">服务协议</string>
    <string name="contact">官方微信</string>
    <string name="contact_wechat">MOIN</string>
    <string name="wechat_acount">微信号：</string>
    <string name="wechat_tip">(点击上方复制微信号)</string>
    <string name="about_moin_name">魔映传媒</string>
    <string name="about_moin_mail">market@moinapp.com</string>
    <string name="phone">联系电话</string>
    <string name="about_moin_phone">025-86135710</string>
    <string name="new_password1">新密码</string>
    <string name="new_password2">确认新密码</string>
    <string name="i_email">邮箱</string>
    <string name="sticker_mall">贴纸商城</string>
    <string name="my_history">我的历史</string>
    <string name="my_sticker">我的贴纸</string>
</resources>