<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/main_bg">

    <include layout="@layout/layout_common_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:src="@drawable/moin"
                android:layout_marginTop="@dimen/margin_bigger" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/about_intro"
                style="@style/common_text_title"
                android:textColor="@color/common_title_grey" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/about_version"
                android:textColor="@color/common_text_light" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_bigger">

        <RelativeLayout
            android:id="@+id/rl_service_protocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/margin_big">

            <TextView
                style="@style/common_text_title"
                android:text="@string/service_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/arrow_padding"
                android:src="@drawable/next_gray" />
        </RelativeLayout>

        <View style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_official_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/margin_big">

            <TextView
                style="@style/common_text_title"
                android:text="@string/contact"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/text_size_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/arrow_padding"
                android:src="@drawable/next_gray" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="10dp">

        <TextView
            android:id="@+id/about_moin_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_moin_name"
            style="@style/common_text_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/about_moin_n"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/common_text_small"
                android:layout_marginRight="5dp"
                android:text="@string/i_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/common_text_small"
                android:layout_marginRight="15dp"
                android:text="@string/about_moin_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/common_text_small"
                android:layout_marginRight="5dp"
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/common_text_small"
                android:layout_marginRight="15dp"
                android:text="@string/about_moin_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>

